care/force-app/main/default/objects/Candidate_Profile__c/fields/Mobil__c.field-meta.xml
<CustomField>
    <fullName>Mobil__c</fullName>
    <label>Mobil</label>
    <type>Phone</type>
</CustomField>