care/force-app/main/default/objects/Candidate_Profile__c/fields/Most_rewarding_to_you__c.field-meta.xml
<CustomField>
    <fullName>Most_rewarding_to_you__c</fullName>
    <inlineHelpText>Out of your past employment, what has stood out as the most rewarding to you</inlineHelpText>
    <label>Most rewarding to you</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>