care/force-app/main/default/objects/Candidate_Profile__c/fields/On_the_books__c.field-meta.xml
<CustomField>
    <fullName>On_the_books__c</fullName>
    <inlineHelpText>Are you willing to be paid “on the books”?</inlineHelpText>
    <label>On the books</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>