care/force-app/main/default/objects/Candidate_Profile__c/fields/Open_Availability_or_Waitlist_Open__c.field-meta.xml
<CustomField>
    <fullName>Open_Availability_or_Waitlist_Open__c</fullName>
    <description>Open Availability or Waitlist Open</description>
    <inlineHelpText>Open Availability or Waitlist Open ?</inlineHelpText>
    <label>Open Availability or Waitlist Open</label>
    <length>255</length>
    <type>Text</type>
</CustomField>