care/force-app/main/default/objects/Candidate_Profile__c/fields/Passed_HT_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Passed_HT_Vetting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed HT Vetting</label>
    <type>Checkbox</type>
</CustomField>