care/force-app/main/default/objects/Candidate_Profile__c/fields/Pending_Verification__c.field-meta.xml
<CustomField>
    <fullName>Pending_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Candidate Profiles for Assisted Search cases, candidate status</description>
    <label>Pending Verification</label>
    <type>Checkbox</type>
</CustomField>