care/force-app/main/default/objects/Candidate_Profile__c/fields/Pets_Cared_for_Professionally__c.field-meta.xml
<CustomField>
    <fullName>Pets_Cared_for_Professionally__c</fullName>
    <description>What Pets Have you Cared for Professionally, field used by Expert Assist users</description>
    <inlineHelpText>What Pets Have you Cared for Professionally ?</inlineHelpText>
    <label>Pets Cared for Professionally ?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>