care/force-app/main/default/objects/Candidate_Profile__c/fields/PLZ__c.field-meta.xml
<CustomField>
    <fullName>PLZ__c</fullName>
    <label>PLZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>