care/force-app/main/default/objects/Candidate_Profile__c/fields/Project_you_Oversaw__c.field-meta.xml
<CustomField>
    <fullName>Project_you_Oversaw__c</fullName>
    <description>Can you tell me about a project you oversaw for a family and how it turned out?, used by AS Users</description>
    <inlineHelpText>Can you tell me about a project you oversaw for a family and how it turned out?</inlineHelpText>
    <label>Project you Oversaw</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>