care/force-app/main/default/objects/Candidate_Profile__c/fields/Protocol_For_Disciplinary_Situations__c.field-meta.xml
<CustomField>
    <fullName>Protocol_For_Disciplinary_Situations__c</fullName>
    <description>Holidays, Additional Days Center is Closed</description>
    <inlineHelpText>Holidays, Additional Days Center is Closed</inlineHelpText>
    <label>Holidays</label>
    <type>TextArea</type>
</CustomField>