care/force-app/main/default/objects/Candidate_Profile__c/fields/Provider_Account__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Provider Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidate Profiles</relationshipLabel>
    <relationshipName>Candidate_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>