care/force-app/main/default/objects/Candidate_Profile__c/fields/Provider_Rating__c.field-meta.xml
<CustomField>
    <fullName>Provider_Rating__c</fullName>
    <description>Rating the seeker gave to the provider.</description>
    <inlineHelpText>Enter the nearest rating that  the seeker gave to the provider.</inlineHelpText>
    <label>Provider Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>satisfied</fullName>
            </value>
            <value>
                <fullName>neutral</fullName>
            </value>
            <value>
                <fullName>not satisfied</fullName>
            </value>
            <value>
                <fullName>don&apos;t hire again!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>