care/force-app/main/default/objects/Candidate_Profile__c/fields/Rechnung_Gewerbeschein__c.field-meta.xml
<CustomField>
    <fullName>Rechnung_Gewerbeschein__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechnung: Gewerbeschein?</label>
    <type>Checkbox</type>
</CustomField>