care/force-app/main/default/objects/Candidate_Profile__c/fields/Rechnung_inkl_exkl_Mwst__c.field-meta.xml
<CustomField>
    <fullName>Rechnung_inkl_exkl_Mwst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechnung: inkl./exkl. Mwst.?</label>
    <type>Checkbox</type>
</CustomField>