care/force-app/main/default/objects/Candidate_Profile__c/fields/Relationship_with_the_last_household__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_the_last_household__c</fullName>
    <description>Describe your relationship with the last household you worked with., Used by AS Users</description>
    <inlineHelpText>Describe your relationship with the last household you worked with.</inlineHelpText>
    <label>Relationship with the last household</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>