care/force-app/main/default/objects/Candidate_Profile__c/fields/Role_of_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Role_of_Caregiver__c</fullName>
    <description>The role the caregiver takes or has to take in this case/event.</description>
    <inlineHelpText>Enter the role, that the caregiver takes or has to take in this case or event.</inlineHelpText>
    <label>Role of Caregiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Head-of</fullName>
            </value>
            <value>
                <fullName>Care giver</fullName>
            </value>
            <value>
                <fullName>Back-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>