care/force-app/main/default/objects/Candidate_Profile__c/fields/Sostiges__c.field-meta.xml
<CustomField>
    <fullName>Sostiges__c</fullName>
    <inlineHelpText>Please add informations about prefered childrens age, special skills (e.g. face painting, baloon art) or details about a personal meeting etc.</inlineHelpText>
    <label>Sostiges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>