care/force-app/main/default/objects/Candidate_Profile__c/fields/Sprachen__c.field-meta.xml
<CustomField>
    <fullName>Sprachen__c</fullName>
    <label>Sprachen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>