care/force-app/main/default/objects/Candidate_Profile__c/fields/Stra_e__c.field-meta.xml
<CustomField>
    <fullName>Stra_e__c</fullName>
    <label>Straße</label>
    <length>255</length>
    <type>Text</type>
</CustomField>