care/force-app/main/default/objects/Candidate_Profile__c/fields/Stundenlohn__c.field-meta.xml
<CustomField>
    <fullName>Stundenlohn__c</fullName>
    <label>Stundenlohn:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>