care/force-app/main/default/objects/Candidate_Profile__c/fields/T_Shirt_Gr_e__c.field-meta.xml
<CustomField>
    <fullName>T_Shirt_Gr_e__c</fullName>
    <label>T-Shirt Größe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>