care/force-app/main/default/objects/Candidate_Profile__c/fields/Tell_me_about_your_greatest_strengths__c.field-meta.xml
<CustomField>
    <fullName>Tell_me_about_your_greatest_strengths__c</fullName>
    <description>Sforce 1911</description>
    <label>Tell me about your greatest strengths?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>