care/force-app/main/default/objects/Candidate_Profile__c/fields/Top_Qualities__c.field-meta.xml
<CustomField>
    <fullName>Top_Qualities__c</fullName>
    <inlineHelpText>What are the top qualities you feel a care provider needs to possess?</inlineHelpText>
    <label>Top Qualities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>