care/force-app/main/default/objects/Candidate_Profile__c/fields/Two_words_to_describe_yourself__c.field-meta.xml
<CustomField>
    <fullName>Two_words_to_describe_yourself__c</fullName>
    <description>Sforce 1777</description>
    <label>Two words to describe yourself?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>