care/force-app/main/default/objects/Candidate_Profile__c/fields/Type_of_Care_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Care_Frequency__c</fullName>
    <label>Type of Care Frequency</label>
    <type>TextArea</type>
</CustomField>