care/force-app/main/default/objects/Candidate_Profile__c/fields/Type_of_Trainings__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Trainings__c</fullName>
    <description>Changed to multi-select picklist per request from Donna.</description>
    <label>Type of Trainings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>First Aid Trained</fullName>
            </value>
            <value>
                <fullName>First Aid Certified</fullName>
            </value>
            <value>
                <fullName>CPR Trained</fullName>
            </value>
            <value>
                <fullName>CPR Certified</fullName>
            </value>
            <value>
                <fullName>Mobility Training</fullName>
            </value>
            <value>
                <fullName>Training in Dementia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>