care/force-app/main/default/objects/Candidate_Profile__c/fields/Under_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Under_Consideration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Consideration</label>
    <type>Checkbox</type>
</CustomField>