care/force-app/main/default/objects/Candidate_Profile__c/fields/Use_your_own_cleaning_supplies__c.field-meta.xml
<CustomField>
    <fullName>Use_your_own_cleaning_supplies__c</fullName>
    <description>Sforce 1777</description>
    <label>Use your own cleaning supplies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>