care/force-app/main/default/objects/Candidate_Profile__c/fields/Weekly_Monthly_Tuition_Rates__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Monthly_Tuition_Rates__c</fullName>
    <description>Weekly/Monthly Tuition Rates ?</description>
    <inlineHelpText>Weekly/Monthly Tuition Rates ?</inlineHelpText>
    <label>Weekly/Monthly Tuition Rates ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>