care/force-app/main/default/objects/Candidate_Profile__c/fields/What_do_you_enjoy_about_tutoring__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_enjoy_about_tutoring__c</fullName>
    <description>What do you enjoy about tutoring? Field used by AS Users</description>
    <inlineHelpText>What do you enjoy about tutoring ?</inlineHelpText>
    <label>What do you enjoy about tutoring ?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>