care/force-app/main/default/objects/Candidate_Profile__c/fields/What_has_been_the_most_challenging__c.field-meta.xml
<CustomField>
    <fullName>What_has_been_the_most_challenging__c</fullName>
    <inlineHelpText>What has been the most challenging?</inlineHelpText>
    <label>What has been the most challenging?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>