care/force-app/main/default/objects/Candidate_Profile__c/fields/What_is_your_concept_of_a_clean_house__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_concept_of_a_clean_house__c</fullName>
    <description>Sforce 1777</description>
    <label>What is your concept of a clean house?</label>
    <type>TextArea</type>
</CustomField>