care/force-app/main/default/objects/Candidate_Profile__c/fields/What_languages_do_you_speak__c.field-meta.xml
<CustomField>
    <fullName>What_languages_do_you_speak__c</fullName>
    <inlineHelpText>Do you speak any other languages besides English?</inlineHelpText>
    <label>What languages do you speak?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>