care/force-app/main/default/objects/Candidate_Profile__c/fields/What_Makes_Your_Center_Unique__c.field-meta.xml
<CustomField>
    <fullName>What_Makes_Your_Center_Unique__c</fullName>
    <description>Field used by Expert Assistance users</description>
    <label>How does a family set up a tour ?</label>
    <type>TextArea</type>
</CustomField>