care/force-app/main/default/objects/Candidate_Profile__c/fields/What_subjects_can_you_tutor__c.field-meta.xml
<CustomField>
    <fullName>What_subjects_can_you_tutor__c</fullName>
    <description>What subjects can you tutor? field used by AS</description>
    <inlineHelpText>What subjects can you tutor ?</inlineHelpText>
    <label>What subjects can you tutor ?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>