care/force-app/main/default/objects/Candidate_Profile__c/fields/Why_do_you_like_doing_this_type_of_work__c.field-meta.xml
<CustomField>
    <fullName>Why_do_you_like_doing_this_type_of_work__c</fullName>
    <description>Sforce 1777</description>
    <label>Why do you like doing this type of work?</label>
    <type>TextArea</type>
</CustomField>