care/force-app/main/default/objects/Candidate_Profile__c/fields/Willing_to_be_paid_on_the_books__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_be_paid_on_the_books__c</fullName>
    <description>Willing to be paid on the books?, field used by AS users</description>
    <label>Willing to be paid on the books ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>