care/force-app/main/default/objects/Candidate_Profile__c/fields/Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience__c</fullName>
    <description>Previous pet care jobs, duties, Etc, field used by Expert Assist Users</description>
    <inlineHelpText>Details about your previous pet care jobs, duties, Etc...</inlineHelpText>
    <label>Work Experience</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>