care/force-app/main/default/objects/Candidate_Profile__c/fields/Working_alone_or_with_partner_team__c.field-meta.xml
<CustomField>
    <fullName>Working_alone_or_with_partner_team__c</fullName>
    <description>Sforce 1777</description>
    <label>Working alone or with partner/team?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>