care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/AS_Child_Care_Center.recordType-meta.xml
<RecordType>
    <fullName>AS_Child_Care_Center</fullName>
    <active>true</active>
    <description>This include questions specific to center-based child care providers</description>
    <label>AS-Child Care Center US</label>
</RecordType>