care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/AS_Needing_Accommodation_US.recordType-meta.xml
<RecordType>
    <fullName>AS_Needing_Accommodation_US</fullName>
    <active>true</active>
    <description>AS - Needing Accommodations Candidate Profile US</description>
    <label>AS - Needing Accommodation US</label>
</RecordType>