care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/AS_Personal_Assistant_US.recordType-meta.xml
<RecordType>
    <fullName>AS_Personal_Assistant_US</fullName>
    <active>true</active>
    <description>AS - Personal Assistant Candidate Profile US</description>
    <label>AS - Personal Assistant US</label>
</RecordType>