care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/AS_Pet_Care.recordType-meta.xml
<RecordType>
    <fullName>AS_Pet_Care</fullName>
    <active>true</active>
    <description>AS - Pet Care Profile US</description>
    <label>AS - Pet Care US</label>
</RecordType>