care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/AS_Tutoring_US.recordType-meta.xml
<RecordType>
    <fullName>AS_Tutoring_US</fullName>
    <active>true</active>
    <description>AS - Tutoring Candidate Profile US</description>
    <label>AS - Tutoring US</label>
</RecordType>