care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/Candidate_Profile_Int_WPS_Service_Assisted_Search.recordType-meta.xml
<RecordType>
    <fullName>Candidate_Profile_Int_WPS_Service_Assisted_Search</fullName>
    <active>true</active>
    <description>This is for German Users Assisted Search. SFORCE-1162</description>
    <label>Candidate Profile Int. WPS Service Assisted Search</label>
</RecordType>