care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/Candidate_Profile_Int_WPS_Service_EventCare.recordType-meta.xml
<RecordType>
    <fullName>Candidate_Profile_Int_WPS_Service_EventCare</fullName>
    <active>true</active>
    <label>Candidate Profile Int. WPS Service EventCare</label>
</RecordType>