care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/Candidate_Profile_US_AS_Housekeeping.recordType-meta.xml
<RecordType>
    <fullName>Candidate_Profile_US_AS_Housekeeping</fullName>
    <active>true</active>
    <description>AS - Housekeeping Candidate Profile US</description>
    <label>AS - Housekeeping US</label>
</RecordType>