care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/Candidate_Profile_US_WPS_Service.recordType-meta.xml
<RecordType>
    <fullName>Candidate_Profile_US_WPS_Service</fullName>
    <active>true</active>
    <description>AS - Standard for the US Child Care</description>
    <label>AS - Child Care US</label>
</RecordType>