care/force-app/main/default/objects/Candidate_Profile__c/recordTypes/Senior_Care_Assistance.recordType-meta.xml
<RecordType>
    <fullName>Senior_Care_Assistance</fullName>
    <active>true</active>
    <description>Accompanies AS - Senior Care cases.</description>
    <label>AS-Senior Care</label>
</RecordType>